--- a/html/main.html
+++ b/html/main.html
@@ -51,7 +51,7 @@
         </div>
 
         <div class="hero-img">
-            <img src="/img/coin1.png" alt="">
+            <img src="" alt="">
         </div>
 
     </section>
@@ -67,7 +67,15 @@
         <a href="#"><i class="ri-arrow-down-line"></i></a>
     </div>
 
-
+    <article class="heading">
+      <article class="heading-text"><p class="heading-text1" >
+        USA five cents 1937
+      </p>
+      <p class="heading-text2">
+         blalallalalalalal
+      </p></article>
+      <img class="heading-img" src="/img/coin1.png" alt="">
+    </article>
 
     <article>
         <section class="cards">
