--- a/login.html
+++ b/login.html
@@ -26,6 +26,9 @@
             <span></span>
             Submit
           </a>
+          <button class="sign-up">
+            <p>sign up</p>
+          </button>
         </form>
       </div>
 </body>
