--- a/html/main.html
+++ b/html/main.html
@@ -36,7 +36,7 @@
         <li><a href="/developer.html">Developers</a></li>
         <li><a href="#">Contact</a></li>
         <li><a href="#">Other websites</a></li>
-        <li><a href="#">Log-in</a></li>
+        <li><a href="/login.html">Log-in</a></li>
         
         
     </ul>
