--- a/html/main.html
+++ b/html/main.html
@@ -12,6 +12,7 @@
   <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
   <!--remixicons-->
   <link href="https://cdn.jsdelivr.net/npm/remixicon@3.2.0/fonts/remixicon.css" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/31ba87c7ce.js" crossorigin="anonymous"></script>
   <!---googlefonts-->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -28,20 +29,10 @@
       <img src="/img/logo7.png" alt="">
     </article>
 
-
-    <ul class="navlist">
-
-      <li><a href="#">Home</a></li>
-      <li><a href="#">About-us</a></li>
-      <li><a href="#">Information</a></li>
-      <li><a href="#">Prices</a></li>
-      <li><a href="#">Deals</a></li>
-      <li><a href="/developer.html">Developers</a></li>
-      <li><a href="#">Contact</a></li>
-      <li><a href="/login.html">Log-in</a></li>
+    
 
 
-    </ul>
+    
 
 
 
@@ -49,14 +40,28 @@
     <div class="bx bx-menu" id="menu-icon"></div>
   </header>
 
+  <ul class="navlist">
+
+    <li><a href="#">Home</a></li>
+    <li><a href="#">About-us</a></li>
+    <li><a href="#">Information</a></li>
+    <li><a href="#">Prices</a></li>
+    <li><a href="#">Deals</a></li>
+    <li><a href="/developer.html">Developers</a></li>
+    <li><a href="#">Contact</a></li>
+    <li><a href="/login.html">Log-in</a></li>
+
+
+  </ul>
+
   <section class="hero">
     <article class="hero-text">
       <h5>Welcome</h5>
       <h1>Greedy's Coins</h1>
       <h4>Greedy's coins: Discover the True Value of Collectible Coins!</h4>
       <p></p>
-      <a href="#">Prices</a>
-      <a href="" class="ctaa"> <i class="ri-play-fill"></i>Take a look at the coins</a>
+      <a href="/about-us.html">Prices</a>
+      <a href="/about-us.html" class="ctaa"> <i class="ri-play-fill"></i>Take a look at the coins</a>
     </article>
 
     <div class="hero-img">
@@ -163,32 +168,21 @@
       </div>
     </div>
   </article>
-  <article class="overtuig">
-  <section class="overtuig1">
-    <p class="overtuig--txt">
-      Buy our coins and banknotes now for a good price!
-      <img src="/img/coin1.png" alt="">
-    </p>
-    </section>
-  <section class="overtuig2">
-    <p class="overtuig--txt">
-      Ordered before 22:00 and get it delivered home the next day!
-      <img src="/img/coin1.png" alt="">
-    </p>
+  <section class="section-a">
+    <div class="container">
+      <div>
+        <h1>The headphones of the future.</h1>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo
+          repudiandae rerum libero ipsum asperiores omnis mollitia, nostrum
+          commodi placeat ea itaque modi corrupti corporis nam voluptas aut
+          reprehenderit eaque culpa.
+        </p>
+        <a href="#" class="btn">Read More</a>
+      </div>
+      <img src="https://i.ibb.co/37Y74kv/showcase.jpg" alt="" />
+    </div>
   </section>
-  <section class="overtuig3">
-    <p class="overtuig--txt">
-      There are multipile discounts check it out now on our shoppingpage!
-      <img src="/img/coin1.png" alt="">
-    </p>
-  </section>
-  <section class="overtuig4">
-    <p class="overtuig--txt">
-      Free delivery on working days
-      <img src="/img/coin1.png" alt="">
-    </p>
-  </section>
-</article>
 
 
 
