--- a/about-us.html
+++ b/about-us.html
@@ -60,7 +60,7 @@
             </section>
 
             <section class="col">
-                <h3>Office  <div class="underline"><span></span></div></h3>
+                <h3>Place  <div class="underline"><span></span></div></h3>
                 <p>Amsterdam</p>
                 <p>Media college</p>
                 <p>Amsterdam, 1111aa, Netherlands</p>
@@ -81,17 +81,17 @@
                 </ul>
             </section>
             <section class="col">
-                <h3>Newsletter <div class="underline"><span></span></div></h3>
+                <h3>Contact <div class="underline"><span></span></div></h3>
                 <form>
                     <i class="fa-solid fa-envelope"></i>
                     <input type="email" placeholder="Enter your email id" required>
                     <button type="submit"><i class="fa-solid fa-arrow-right"></i></button>
                 </form>
                 <article class="social-icons">
-                    <i class="fa-brands fa-square-facebook"></i>
-                    <i class="fa-brands fa-instagram"></i>
-                    <i class="fa-brands fa-twitter"></i>
-                    <i class="fa-brands fa-whatsapp"></i>
+                    <a href=""><i class="fa-brands fa-square-facebook"></i></a>
+                    <a href=""><i class="fa-brands fa-instagram"></i></a>
+                    <a href=""><i class="fa-brands fa-twitter"></i></a>
+                    <a href=""><i class="fa-brands fa-whatsapp"></i></a>
                 </article>
             </section>
         </article >
