--- a/html/main.html
+++ b/html/main.html
@@ -19,6 +19,7 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Ceviche+One&family=Jost:ital,wght@1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Montserrat:ital,wght@1,100;1,200;1,300;1,400;1,500;1,600&family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&family=Playfair+Display:ital,wght@1,400;1,500;1,600;1,700;1,800;1,900&family=Poppins:wght@300;400;500;600;700;800;900&display=swap"
     rel="stylesheet">
+    <script src="https://kit.fontawesome.com/31ba87c7ce.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -27,6 +28,9 @@
 
     <article class="logo">
       <img src="/img/logo7.png" alt="">
+    </article>
+    <article class="cart">
+      <a href="/productpage1.html"><i class="fa-solid fa-cart-shopping"></i></a>
     </article>
 
     
@@ -42,13 +46,15 @@
 
   <ul class="navlist">
 
-    <li><a href="#">Home</a></li>
-    <li><a href="#">About-us</a></li>
+    <li><a href="/html/main.html">Home</a></li>
+    <li><a href="/about-us.html">About-us</a></li>
     <li><a href="#">Information</a></li>
+    <li><a href="/productpage1.html">Products page#1</a></li>
+    <li><a href="#">Products page#2</a></li>
     <li><a href="#">Prices</a></li>
     <li><a href="#">Deals</a></li>
     <li><a href="/developer.html">Developers</a></li>
-    <li><a href="#">Contact</a></li>
+    <li><a href="/contact.html">Contact</a></li>
     <li><a href="/login.html">Log-in</a></li>
 
 
@@ -65,7 +71,7 @@
     </article>
 
     <div class="hero-img">
-      <img src="/img/coin1.png" alt="">
+      <img src="/img/product1nl.png" alt="">
     </div>
 
 
@@ -85,19 +91,22 @@
   <article class="heading">
     <article class="heading-text">
       <p class="heading-text1">
-        USA five cents 1937
+        Munt 1 euro Nederland 2001 BEATRIX KONINGIN der NEDERLANDEN
       </p>
       <p class="heading-text2">
-        blalallalalalalal
+        2 euro coin from the Netherlands,
+        year 2000. Beatrix Queen of the Netherlands,
+        On the edge we see the marks of issue:
+        God be with us.
       </p>
       <a href="#">
         <div class="wrap">
-          <button class="button">Submit</button>
+          <a href="/dutch.html"><button class="button">Buy now!</button></a>
         </div>
       </a>
 
     </article>
-    <img class="heading-img" src="/img/coin1.png" alt="">
+    <img class="heading-img" src="/img/product2nl.png" alt="">
   </article>
 
   <article>
@@ -112,12 +121,13 @@
     <div class="row">
       <div class="card">
         <div class="image">
-          <img src="/img/coin1.png" />
+          <img src="/img/banknotes3.png" />
         </div>
         <div class="details">
           <h2 class="name">Coin 1</h2>
-          <h3 class="title">blalallalalalalal</h4>
-            <button class="btn-hover color-5">BUTTON</button>
+          <h3 class="title">Banknote China 10 Yen - Dragon - ND (1939) - F to VF - P.M20</h4>
+            <p>€11111111399,99</p>
+            <a href="/banknotes.html"><button class="btn-hover color-5">Buy now!</button></a>
         </div>
 
       </div>
@@ -127,12 +137,13 @@
     <div class="row">
       <div class="card">
         <div class="image">
-          <img src="/img/coin1.png" />
+          <img src="/img/silver2.png" />
         </div>
         <div class="details">
           <h2 class="name">Coin 1</h2>
-          <h3 class="title">blalallalalalalal</h4>
-            <button class="btn-hover color-5">BUTTON</button>
+          <h3 class="title">Australia Silver Coin, 2017, Koala, Queen Elizabeth II</h4>
+            <p>€39,99</p>
+            <a href="/silver.html"><button class="btn-hover color-5">Buy now!</button></a>
         </div>
 
       </div>
@@ -142,12 +153,13 @@
     <div class="row">
       <div class="card">
         <div class="image">
-          <img src="/img/coin1.png" />
+          <img src="/img/product3nl.png" />
         </div>
         <div class="details">
           <h2 class="name">Coin 1</h2>
-          <h3 class="title">blalallalalalalal</h4>
-            <button class="btn-hover color-5">BUTTON</button>
+          <h3 class="title">Munt 0,05 euro Nederland 1999 BEATRIX KONINGIN der NEDERLANDEN</h4>
+            <p>€114,99</p>
+            <a href="/dutch.html"><button class="btn-hover color-5">Buy now!</button></a>
         </div>
 
       </div>
@@ -157,34 +169,202 @@
     <div class="row">
       <div class="card">
         <div class="image">
-          <img src="/img/coin1.png" />
+          <img src="/img/silver3.png" />
         </div>
         <div class="details">
           <h2 class="name">Coin 1</h2>
-          <h3 class="title">blalallalalalalal</h4>
-            <button class="btn-hover color-5">BUTTON</button>
+          <h3 class="title">1 troy ounce silver coin Maple Leaf Canada</h4>
+            <p>€29,99</p>
+            <a href="/silver.html"><button class="btn-hover color-5">Buy now!</button></a>
         </div>
 
       </div>
     </div>
   </article>
+  <article class="sec sec--3--steps">
+    <h1>Why at our store ❔</h1>
+    <section class="step step--1">
+        <figure>🚚📦</figure>
+        <h2>1. First day delivery!</h2>
+    </section>
+
+    <section class="step step--2">
+        <figure>💫</figure>
+        <h2>2. High quality!</h2>
+    </section>
+
+    <section class="step step--3">
+        <figure>🤑</figure>
+        <h2>3. Always discounts!</h2>
+    </section>
+
+    <section class="step step--4">
+        <figure>🔏</figure>
+        <h2>4. Pay safe!</h2>
+    </section>
+    </article>
   <section class="section-a">
     <div class="container">
       <div>
-        <h1>The headphones of the future.</h1>
+        <h1>Munt 2 euro nederland 2001 beatrix</h1>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo
-          repudiandae rerum libero ipsum asperiores omnis mollitia, nostrum
-          commodi placeat ea itaque modi corrupti corporis nam voluptas aut
-          reprehenderit eaque culpa.
+          The coin was minted in December last year,
+           the year in which Beatrix stepped down. This is a limited edition coin,
+            only 38 of them were struck at a special meeting.
+             In addition, the 2-euro coin does not have an edge lettering.
+              Normally the saying 'God be with us' is on the coin.
         </p>
-        <a href="#" class="btn">Read More</a>
+        <section class="about">
+        <a href=""><button type="button">Buy now!</button></a>
+      </section>
       </div>
-      <img src="https://i.ibb.co/37Y74kv/showcase.jpg" alt="" />
+      <img src="/img/product1nl.png" alt="" />
     </div>
   </section>
 
+  <section class="section section--third">
+        <button class="arrow"></button>
+        <ul class="reviews">
+            <li class="review">
+                <figure class="quote">
+                    &#10077;
+                </figure>
+                <section class="stars">&#9733;
+                    &#9733;
+                    &#9733;
+                </section>
+                <img src="/img/review1.jpg" alt="">
+                <p>1. Greedy's is hands down the best store I've ever been to! The selection is amazing, and they always have the latest trends in stock. The staff is friendly and helpful, making shopping a breeze. I highly recommend Greedy's for all your fashion needs!.</p>
+            </li>
+            <li class="review">
+                <figure class="quote">
+                    &#10077;
+                </figure>
+                <section class="stars">
+                    &#9733;
+                    &#9733;
+                    &#9733;
+                    &#9733;
+                </section>
+                <img src="/img/review2.jpg" alt="">
+                <p>2. I had a fantastic experience shopping at Greedy's. The store is well-organized, and it's easy to find what you're looking for. The quality of their products is top-notch, and their prices are reasonable. Whether you're shopping for clothing, accessories, or home decor, Greedy's has it all!</p>
+            </li>
+            <li class="review">
+                <figure class="quote">
+                    &#10077;
+                </figure>
+                <section class="stars">&#9733;
+                        &#9733;
+                        &#9733;
+                </section>
+                <img src="/img/review3.jpg" alt="">
+                <p>3.Greedy's is a hidden gem! I stumbled upon this store while exploring the city, and I'm so glad I did. The store has a unique selection of items that you won't find anywhere else. It's a great place to find gifts for friends and family. I'll definitely be back!</p>
+            </li>
+            <li class="review">
+                <figure class="quote">
+                    &#10077;
+                </figure>
+                <section class="stars">&#9733;
+                    &#9733;
+                    &#9733;
+                </section>
+                <img src="/img/review4.png" alt="">
+                <p>4. I recently visited Greedy's for the first time, and I was blown away by the level of customer service. The staff went above and beyond to assist me in finding the perfect outfit for a special occasion. They were patient, attentive, and genuinely cared about my satisfaction. Greedy's has won me over as a loyal customer!</p>
+            </li>
+            <li class="review">
+                <figure class="quote">
+                    &#10077;
+                </figure>
+                <section class="stars">&#9733;
+                    &#9733;
+                    &#9733;
+                </section>
+                <img src="/img/review5.gif" alt="">
+                <p>5. Me as a lightskin Greedy's is a fashion lover's paradise! The store is beautifully designed, and it feels like stepping into a high-end boutique. The quality of their Coins and banknotes is exceptional, and the styles are always on-trend. If you want to elevate your collection, Greedy's is the place to go.</p>
+            </li>
+            <li class="review">
+                <figure class="quote">
+                    &#10077;
+                </figure>
+                <section class="stars">&#9733;
+                    &#9733;
+                    &#9733;
+                    &#9733;
+                    &#9733;
+                    &#9733;
+                    &#9733;
+                    &#9733;
+                    &#9733;
+                    &#9733;
+                    &#9733;
+                    &#9733;
+                    &#9733;
+                    &#9733;
+                    &#9733;
+                    &#9733;
+                    &#9733;
+                    &#9733;
 
+                </section>
+                <img src="/img/palah" alt="">
+                <p>6. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus nulla totam saepe nobis
+                    harum sit itaque, natus possimus quod ea odio doloremque. Soluta incidunt ipsum odit placeat, quam
+                    ducimus officia.</p>
+            </li>
+        </ul>
+        <button class="arrow">></button>
+    </section>
+    <section class="section section--first"></section>
+    <section class="section section--second"></section>
+
+    <footer>
+      <article class="row">
+          <section class="col">
+              <img src="/img/logo7.png" alt="" class="logo">
+              <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Praesentium dolorem repudiandae aspernatur ullam. Eaque itaque sed quae, maiores laborum soluta suscipit enim, dolore sequi laboriosam sunt, accusamus hic iste quas.</p>
+          </section>
+
+          <section class="col">
+              <h3>Place  <div class="underline"><span></span></div></h3>
+              <p>Amsterdam</p>
+              <p>Media college</p>
+              <p>Amsterdam, 1111aa, Netherlands</p>
+              <p class="email-id">34904@ma-web.nl</p>
+              <h4>+31 06123456789</h4>
+          </section>
+          <section class="col">
+              <h3>Links <div class="underline"><span></span></div></h3>
+              <ul>
+                <li><a href="/html/main.html">Home</a></li>
+                <li><a href="/about-us.html">About-us</a></li>
+                <li><a href="#">Information</a></li>
+                <li><a href="/productpage1.html">Products page#1</a></li>
+                <li><a href="#">Products page#2</a></li>
+                <li><a href="#">Prices</a></li>
+                <li><a href="#">Deals</a></li>
+                <li><a href="/developer.html">Developers</a></li>
+                <li><a href="/contact.html">Contact</a></li>
+                <li><a href="/login.html">Log-in</a></li>
+              </ul>
+          </section>
+          <section class="col">
+              <h3>Contact <div class="underline"><span></span></div></h3>
+              <form>
+                  <i class="fa-solid fa-envelope"></i>
+                  <input type="email" placeholder="Enter your email id" required>
+                  <button type="submit"><i class="fa-solid fa-arrow-right"></i></button>
+              </form>
+              <article class="social-icons">
+                  <a href=""><i class="fa-brands fa-square-facebook"></i></a>
+                  <a href=""><i class="fa-brands fa-instagram"></i></a>
+                  <a href=""><i class="fa-brands fa-twitter"></i></a>
+                  <a href=""><i class="fa-brands fa-whatsapp"></i></a>
+              </article>
+          </section>
+      </article >
+      <hr>
+      <p class="copyright">Greedy's ©2023 - All Rights Reserved </p>
+  </footer>
 
   <!--scrollreveale effect-->
   <script src="https://unpkg.com/scrollreveal"></script>
