--- a/productpage.html
+++ b/productpage.html
@@ -4,15 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Product page</title>
+    <title>Document</title>
     <link rel="stylesheet" href="/productpage.css">
-    <script src="/productpage.js " defer></script>
 </head>
 <body>
     <div class="section-fluid-main">
 		<div class="section">
 	      	<div class="info-wrap mob-margin">
-	      		<p class="title-up">Coins</p>
+	      		<p class="title-up">Modern chair</p>
 	      		<h2>Sella Gastro</h2>
 	      		<h4>$174 <span>$237</span></h4>	
 	      		<div class="section-fluid">
@@ -70,9 +69,7 @@
 	      	<div class="back-color chair-5"></div>	
 	      	<div class="back-color chair-6"></div>	
 
-			<a href="https://front.codes/" class="logo" target="_blank">
-				<img src="https://assets.codepen.io/1462889/fcy.png" alt="">
-			</a>	
+			
 		</div>
 	</div>
 </body>
