--- a/gold.html
+++ b/gold.html
@@ -23,7 +23,7 @@
             </li>
             <li class="checkOut__listItem">
                 <img src="/img/gold2.png" alt="champagne" class="checkOut__image">
-                <p class="checkOut__title">50 cent euromunt Frankrijk 1999 50cent Frankrijk euromuntn</p>
+                <p class="checkOut__title">50 cent euromunt Frankrijk 1999 50cent Frankrijk euromunt</p>
                 <p id="js--amount-champagne2" class="checkOut__amount"></p>
             </li>
             <li class="checkOut__listItem">
