--- a/html/main.html
+++ b/html/main.html
@@ -35,7 +35,7 @@
     <div class="wrapper">
       <div class="label">Submit your search</div>
       <div class="searchBar">
-        <input id="searchQueryInput" type="text" name="searchQueryInput" placeholder="Search" value="" />
+        <input id="searchQueryInput" type="text" name="searchQueryInput" placeholder="Hello men!!!!!!!!!!!!!!!!!!!" value="" />
         <button id="searchQuerySubmit" type="submit" name="searchQuerySubmit">
           <svg style="width:40px;height:30px" viewBox="9 2 20 24">
             <path fill="#39b54a"
