--- a/productpage1.html
+++ b/productpage1.html
@@ -134,9 +134,10 @@
         <li class="part" data-category="part--1"><img src="img/product1nl.png"
             alt="figuurtje van de stand Joseph joestar"></li>
         <p>Munt 2 euro Nederland 2001 BEATRIX</p>
+        <a href="dutch.html"><h2>Op vooraad > </h2></a>
         <h2>test</h2>
         <section class="about">
-          <a href=""><button type="button">add to cart</button></a>
+          <a href="dutch.html"><button type="button">add to cart</button></a>
         </section>
         
 
@@ -147,18 +148,20 @@
         <li class="part" data-category="part--4"><img src="img/banknotes1.png"
             alt="figuurtje van de stand Crazy Diamond"></li>
         <p>100 Gulden "Snip" 1977 ZFr+</p>
+        <a href="banknotes.html"><h2>Op vooraad > </h2></a>
         <h2>test</h2>
         <section class="about">
-          <a href=""><button type="button">add to cart</button></a>
+          <a href="banknotes.html"><button type="button">add to cart</button></a>
         </section>
       </section>
 
       <section class="part--section">
         <li class="part" data-category="part--3"><img src="img/silver1.png" alt="figuurtje van DIO"></li>
        <p>2022 St. Helena 1 oz Silver Queens Coin</p>
+       <a href="silver.html"><h2>Op vooraad > </h2></a>
        <h2>test</h2>
        <section class="about">
-          <a href=""><button type="button">add to cart</button></a>
+          <a href="silver.html"><button type="button">add to cart</button></a>
         </section>
 
       </section>
@@ -167,9 +170,10 @@
         <li class="part" data-category="part--1"><img src="img/product2nl.png"
             alt="figuurtje van de stand Joseph joestar"></li>
         <p>Munt 1 euro Nederland 2001 BEATRIX</p>
+        <a href="dutch.html"><h2>Op vooraad > </h2></a>
         <h2>test</h2>
         <section class="about">
-          <a href=""><button type="button">add to cart</button></a>
+          <a href="dutch.html"><button type="button">add to cart</button></a>
         </section>
 
       </section>
@@ -177,9 +181,10 @@
       <section class="part--section">
         <li class="part" data-category="part--2"><img src="img/gold1.png" alt="figuurtje van Esidisi"></li>
         <p>2 Euro 2000, Juan Carlos I spain</p>
+        <a href="gold.html"><h2>Op vooraad > </h2></a>
         <h2>test</h2>
         <section class="about">
-          <a href=""><button type="button">add to cart</button></a>
+          <a href="gold.html"><button type="button">add to cart</button></a>
         </section>
 
       </section>
@@ -188,9 +193,10 @@
         <li class="part" data-category="part--4"><img src="img/banknotes2.png"
             alt="figuurtje van de stand Crazy Diamond"></li>
         <p>Netherlands 1000 Gulden Banknote 1972</p>
+        <a href="banknotes.html"><h2>Op vooraad > </h2></a>
         <h2>test</h2>
         <section class="about">
-          <a href=""><button type="button">add to cart</button></a>
+          <a href="banknotes.html"><button type="button">add to cart</button></a>
         </section>
       </section>
 
@@ -198,9 +204,10 @@
         <li class="part" data-category="part--1"><img src="img/product3nl.png"
             alt="figuurtje van de stand Joseph joestar"></li>
         <p>Koningin Beatrix 5 EuroCent</p>
+        <a href="dutch.html"><h2>Op vooraad > </h2></a>
         <h2>test</h2>
         <section class="about">
-          <a href=""><button type="button">add to cart</button></a>
+          <a href="dutch.html"><button type="button">add to cart</button></a>
         </section>
 
       </section>
@@ -208,9 +215,10 @@
         <li class="part" data-category="part--2"><img src="img/gold2.png"
             alt="figuurtje van de stand Joseph joestar"></li>
         <p>50 cent euromunt Frankrijk 1999</p>
+        <a href="gold.html"><h2>Op vooraad > </h2></a>
         <h2>test</h2>
         <section class="about">
-          <a href=""><button type="button">add to cart</button></a>
+          <a href="gold.html"><button type="button">add to cart</button></a>
         </section>
 
       </section>
@@ -219,9 +227,10 @@
         <li class="part" data-category="part--3"><img src="img/silver2.png"
             alt="figuurtje van de stand Jotaro Kujo"></li>
         <p>Australia Silver Coin 2017 Koala Elizabeth II</p>
+        <a href="silver.html"><h2>Op vooraad > </h2></a>
         <h2>test</h2>
         <section class="about">
-          <a href=""><button type="button">add to cart</button></a>
+          <a href="silver.html"><button type="button">add to cart</button></a>
         </section>
 
       </section>
@@ -230,9 +239,10 @@
         <li class="part" data-category="part--4"><img src="img/banknotes3.png"
             alt="figuurtje van de stand Killer Queen"></li>
         <p>Banknote China 10 Yen - Dragon - ND 1939</p>
+        <a href="banknotes.html"><h2>Op vooraad > </h2></a>
         <h2>test</h2>
         <section class="about">
-          <a href=""><button type="button">add to cart</button></a>
+          <a href="banknotes.html"><button type="button">add to cart</button></a>
         </section>
 
       </section>
@@ -241,9 +251,10 @@
         <li class="part" data-category="part--2"><img src="img/gold3.png"
             alt="figuurtje van de stand Joseph joestar"></li>
        <p>Duitsland 2 Euro F = Stuttgart</p>
+       <a href="gold.html"><h2>Op vooraad > </h2></a>
        <h2>test</h2>
        <section class="about">
-          <a href=""><button type="button">add to cart</button></a>
+          <a href="gold.html"><button type="button">add to cart</button></a>
         </section>
 
       </section>
@@ -253,9 +264,10 @@
         <li class="part" data-category="part--3"><img src="img/silver3.png"
             alt="figuurtje van de stand The World - Limited Edition"></li>
         <p>1 troy ounce silver coin Maple Leaf</p>
+        <a href="silver.html"><h2>Op vooraad > </h2></a>
         <h2>test</h2>
         <section class="about">
-          <a href=""><button type="button">add to cart</button></a>
+          <a href="silver.html"><button type="button">add to cart</button></a>
         </section>
 
       </section>
